# FXFrame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Base/: crc32.hpp  lexical_cast.hpp  zlibhelper.h
FXComm/: CMakeLists.txt
FXComm/FXCore/: FXCConsistentHash.hpp  FXDataList.hpp  FXDateTime.hpp  FXException.hpp  FXList.hpp  FXMap.hpp  FXMapEx.hpp  FXMemoryCounter.hpp  FXQueue.hpp  FXSingleton.hpp
FXComm/FXGuiLoader/: CMakeLists.txt  FXBackGroundThread.h  FXBackgroundTask.cpp  FXCDynLib.cpp  FXCDynLib.h  FXCPluginManager.cpp  FXCPluginManager.h  FXGuiLoader.cpp  FXMainWindow.cpp  FXMainWindow.h  mainWindow.ui
FXComm/FXKernelPlugin/: CMakeLists.txt  FXCEventModule.cpp  FXCEventModule.h  FXCKernelModule.cpp  FXCKernelModule.h  FXCScheduleModule.cpp  FXCScheduleModule.h  FXKernelPlugin.cpp  FXKernelPlugin.h  dllmain.cpp
FXComm/FXLogicDefine/: FXEventDefine.h
FXComm/FXPublic/: FXGUID.h  FXIEventModule.h  FXIKernelModule.h  FXIModule.h  FXIPlugin.h  FXIPluginManager.h  FXIScheduleModule.h  FXPlatform.h
FXTutorial/: CMakeLists.txt
FXTutorial/FXTutorial3/: CMakeLists.txt  HelloWorld3Module.cpp  HelloWorld3Module.h  Tutorial3Plugin.cpp  Tutorial3Plugin.h  dllmain.cpp
FXTutorial/GUIMeshPlugin/: CMakeLists.txt  GuiMeshModule.cpp  GuiMeshModule.h  GuiMeshPlugin.cpp  GuiMeshPlugin.h  dllmain.cpp
config/: GUIPlugin.xml  Plugin.xml  run_gui.bat  run_gui.sh
